ggplot2 1.0.1.9xxx
----------------------------------------------------------------

* Character labels in `facet_grid()` are no longer (incorrectly) coerced into
  factors. This caused problems with custom label functions (#1070).

* `scale_y_continuous()` now also transforms the `lower`, `middle` and `upper`
  aesthetics used by `geom_boxplot()`: this only affects
  `geom_boxplot(stat = "identity")` (#1020).

* `stat_summary_hex()` and `stat_summary2d()` no longer passes `...` on to their
  summary functions - instead they have a new argument `fun.args`, a list
  of arguments to pass on.

* The internals of positions have been cleaned up considerably. You're unlikely
  to notice any external changes, although the documentation should be a little
  less confusing since positions now don't list parameters they never use.

* You can now suppress the appearance of an axis/legend title (and the space
  that would allocated for it) with `NULL` in the `scale_` function. To
  use the default lable, use `waiver()` (#1145).

* `geom_bin2d()` will now let you specify one dimension's breaks exactly,
  without touching the other dimension's default breaks at all (#1126).

* `labels = NULL` now works with `guide_legend()` and `guide_colorbar()`.
  (#1175, #1183).

* Improved documentation for `aes()`, `layer()` and many geoms and scales. I've
  tried to reduce the use of `...` so that you can see all the documentation in
  one place rather than having to navigate through multiple pages. Use
  of `qplot()` in examples has been minimised (#1123, @hrbrmstr). Tighly
  linked geoms and stats (e.g. `geom_boxplot()` and `stat_boxplot()`) are
  now documented in the same file so you can see all the arguments in one
  place.

* `geom_abline()`, `geom_hline()` and `geom_vline()` have been rewritten to
  have simpler behaviour and be more consistent:

    * `stat_abline()`, `stat_hline()` and `stat_vline()` have been removed: