@@ -455,7 +455,6 @@ export(scale_y_sqrt)
 export(should_stop)
 export(stat_bin)
 export(stat_bin2d)
-export(stat_bindot)
 export(stat_binhex)
 export(stat_boxplot)
 export(stat_contour)
