@@ -1,66 +1,3 @@
-#' @inheritParams stat_identity
-#' @param binaxis The axis to bin along, "x" (default) or "y"
-#' @param method "dotdensity" (default) for dot-density binning, or
-#'   "histodot" for fixed bin widths (like stat_bin)
-#' @param binwidth When \code{method} is "dotdensity", this specifies maximum bin
-#'   width. When \code{method} is "histodot", this specifies bin width.
-#'   Defaults to 1/30 of the range of the data
-#' @param binpositions When \code{method} is "dotdensity", "bygroup" (default)
-#'   determines positions of the bins for each group separately. "all" determines
-#'   positions of the bins with all the data taken together; this is used for
-#'   aligning dot stacks across multiple groups.
-#' @param origin When \code{method} is "histodot", origin of first bin
-#' @param right When \code{method} is "histodot", should intervals be closed
-#'   on the right (a, b], or not [a, b)
-#' @param width When \code{binaxis} is "y", the spacing of the dot stacks
-#'   for dodging.
-#' @param na.rm If \code{FALSE} (the default), removes missing values with
-#'    a warning.  If \code{TRUE} silently removes missing values.
-#' @param drop If TRUE, remove all bins with zero counts
-#'
-#' @return New data frame with additional columns:
-#'   \item{x}{center of each bin, if binaxis is "x"}
-#'   \item{y}{center of each bin, if binaxis is "x"}
-#'   \item{binwidth}{max width of each bin if method is "dotdensity";
-#'     width of each bin if method is "histodot"}
-#'   \item{count}{number of points in bin}
-#'   \item{ncount}{count, scaled to maximum of 1}
-#'   \item{density}{density of points in bin, scaled to integrate to 1,
-#'     if method is "histodot"}
-#'   \item{ndensity}{density, scaled to maximum of 1, if method is "histodot"}
-#' @export
-#' @rdname geom_dotplot
-stat_bindot <- function (mapping = NULL, data = NULL, geom = "dotplot",
-  position = "identity", binwidth = NULL, origin = NULL, width = 0.9,
-  binaxis = "x", method = "dotdensity", binpositions = "bygroup", drop = FALSE,
-  right = TRUE, na.rm = FALSE, show_guide = NA, inherit.aes = TRUE, ...)
-{
-  layer(
-    data = data,
-    mapping = mapping,
-    stat = StatBindot,
-    geom = geom,
-    position = position,
-    show_guide = show_guide,
-    inherit.aes = inherit.aes,
-    stat_params = list(
-      binaxis = binaxis,
-      na.rm = na.rm,
-      binwidth = binwidth,
-      origin = origin,
-      width = width,
-      binpositions = binpositions,
-      method = method
-    ),
-    geom_params = list(
-      binaxis = binaxis,
-      na.rm = na.rm
-    ),
-    params = list(...)
-  )
-}
-
-
 #' @rdname ggplot2-ggproto
 #' @format NULL
 #' @usage NULL
