@@ -1,21 +1,14 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/geom-dotplot.r, R/stat-bindot.r
+% Please edit documentation in R/geom-dotplot.r
 \name{geom_dotplot}
 \alias{geom_dotplot}
-\alias{stat_bindot}
 \title{Dot plot}
 \usage{
-geom_dotplot(mapping = NULL, data = NULL, stat = "bindot",
-  position = "identity", na.rm = FALSE, binwidth = NULL, binaxis = "x",
-  method = "dotdensity", binpositions = "bygroup", stackdir = "up",
-  stackratio = 1, dotsize = 1, stackgroups = FALSE, show_guide = NA,
-  inherit.aes = TRUE, ...)
-
-stat_bindot(mapping = NULL, data = NULL, geom = "dotplot",
-  position = "identity", binwidth = NULL, origin = NULL, width = 0.9,
-  binaxis = "x", method = "dotdensity", binpositions = "bygroup",
-  drop = FALSE, right = TRUE, na.rm = FALSE, show_guide = NA,
-  inherit.aes = TRUE, ...)
+geom_dotplot(mapping = NULL, data = NULL, position = "identity",
+  na.rm = FALSE, binwidth = NULL, binaxis = "x", method = "dotdensity",
+  binpositions = "bygroup", stackdir = "up", stackratio = 1,
+  dotsize = 1, stackgroups = FALSE, origin = NULL, right = TRUE,
+  width = 0.9, drop = FALSE, show_guide = NA, inherit.aes = TRUE, ...)
 }
 \arguments{
 \item{mapping}{The aesthetic mapping, usually constructed with
@@ -57,6 +50,16 @@ just touch. Use smaller values for closer, overlapping dots.}
 that \code{position = "stack"} should have, but can't (because this geom has
 some odd properties).}
 
+\item{origin}{When \code{method} is "histodot", origin of first bin}
+
+\item{right}{When \code{method} is "histodot", should intervals be closed
+on the right (a, b], or not [a, b)}
+
+\item{width}{When \code{binaxis} is "y", the spacing of the dot stacks
+for dodging.}
+
+\item{drop}{If TRUE, remove all bins with zero counts}
+
 \item{show_guide}{logical. Should this layer be included in the legends?
 \code{NA}, the default, includes if any aesthetics are mapped.
 \code{FALSE} never includes, and \code{TRUE} always includes.}
@@ -76,19 +79,6 @@ the default plot specification, e.g. \code{\link{borders}}.}
     default \code{stat} associated with the layer.
   \item Other arguments passed on to the stat.
   }}
-
-\item{geom,stat}{Use to override the default connection between
-\code{geom_dotplot} and \code{stat_bindot}.}
-
-\item{origin}{When \code{method} is "histodot", origin of first bin}
-
-\item{width}{When \code{binaxis} is "y", the spacing of the dot stacks
-for dodging.}
-
-\item{drop}{If TRUE, remove all bins with zero counts}
-
-\item{right}{When \code{method} is "histodot", should intervals be closed
-on the right (a, b], or not [a, b)}
 }
 \value{
 New data frame with additional columns:
@@ -147,7 +137,6 @@ ggplot(mtcars, aes(x = mpg)) + geom_dotplot(binwidth = 1.5, stackratio = .7)
 
 # Expand dot diameter
 ggplot(mtcars, aes(x = mpg)) + geom_dotplot(binwidth = 1.5, dotsize = 1.25)
-
 
 # Examples with stacking along y axis instead of x
 ggplot(mtcars, aes(x = 1, y = mpg)) +
