@@ -1,6 +1,10 @@
 ggplot2 1.0.1.9xxx
 ----------------------------------------------------------------
 
+* `stat_bindot()` has been removed because it's so tightly coupled to
+  `geom_dotplot()`. If you happened to use `stat_bindot()`, just change to
+  `geom_dotplot()` (#1194).
+
 * Character labels in `facet_grid()` are no longer (incorrectly) coerced into
   factors. This caused problems with custom label functions (#1070).
 
